backend/src/tests/fixtures/photos/negative/photoMinLength.fixture.ts
export default {
  details: {
    captureLocation: '1',
    imageCaption: '1',
    imageTitle: '1',
  },
  equipment: {
    cameraIso: '1',
    cameraName: '1',
    lensAperture: '1',
    lensFocalLength: '1',
    lensName: '1',
    lensShutterSpeed: '1',
  },
};
